Run linter also on api folder

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -47,7 +47,7 @@ spec:
     name: v1alpha5
     schema:
       openAPIV3Schema:
-        description: Metal3Cluster is the Schema for the metal3clusters API
+        description: Metal3Cluster is the Schema for the metal3clusters API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -142,7 +142,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Metal3Cluster is the Schema for the metal3clusters API
+        description: Metal3Cluster is the Schema for the metal3clusters API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
