--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
@@ -31,7 +31,7 @@ spec:
     name: v1alpha5
     schema:
       openAPIV3Schema:
-        description: Metal3DataClaim is the Schema for the metal3datas API
+        description: Metal3DataClaim is the Schema for the metal3datas API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -146,7 +146,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Metal3DataClaim is the Schema for the metal3datas API
+        description: Metal3DataClaim is the Schema for the metal3datas API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
