Install CNI with ClusterResourceSet

--- a/test/e2e/data/infrastructure-metal3/bases/cluster/cluster-with-kcp.yaml
+++ b/test/e2e/data/infrastructure-metal3/bases/cluster/cluster-with-kcp.yaml
@@ -1,6 +1,8 @@
 apiVersion: cluster.x-k8s.io/${CAPI_VERSION}
 kind: Cluster
 metadata:
+  labels:
+    cni: ${CLUSTER_NAME}-crs-0
   name: ${CLUSTER_NAME}
   namespace: ${NAMESPACE}
 spec:
