--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -10,7 +10,6 @@ linters:
   enable:
     - asciicheck
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
     - errcheck
@@ -36,13 +35,11 @@ linters:
     - revive
     - rowserrcheck
     - staticcheck
-    - structcheck
     - stylecheck
     - thelper
     - typecheck
     - unconvert
     - unused
-    - varcheck
     - whitespace
   # Run with --fast=false for more extensive checks
   fast: true
@@ -68,6 +65,8 @@ linters-settings:
           alias: apierrors
         - pkg: k8s.io/apimachinery/pkg/util/errors
           alias: kerrors
+        - pkg: k8s.io/component-base/logs/api/v1
+          alias: logsv1
         # Controller Runtime
         - pkg: sigs.k8s.io/controller-runtime
           alias: ctrl
