--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -44,6 +44,10 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
+# [ANNOTATION] To add CRD name check skip, uncomment the section with [ANNOTATION] prefix.
+# patch here is for adding an annotation for specific CRD (Metal3Data)
+- patches/skipcrdnamecheck_in_metal3datas.yaml
+
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
 - kustomizeconfig.yaml
