--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -468,6 +468,10 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              failureDomain:
+                description: FailureDomain is the failure domain the machine will
+                  be created in.
+                type: string
               hostSelector:
                 description: HostSelector specifies matching criteria for labels on
                   BareMetalHosts. This is used to limit the set of BareMetalHost objects
