Add ci provision and deprovision test to e2e

--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -179,3 +179,4 @@ intervals:
   default/wait-machine-running: ["50m", "20s"]
   default/wait-bmh-provisioned: ["50m", "20s"]
   default/wait-pod-restart: ["6m", "10s"]
+  default/wait-deprovision-cluster: ["30m", "10s"]
