--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -3,8 +3,8 @@ run:
   skip-dirs:
     - mock*
   skip-files:
-  - "zz_generated.*\\.go$"
-  - ".*conversion.*\\.go$"
+    - "zz_generated.*\\.go$"
+    - ".*conversion.*\\.go$"
 linters:
   disable-all: true
   enable:
@@ -28,7 +28,7 @@ linters:
     - misspell
     - nakedret
     - nilerr
-    - noctx 
+    - noctx
     - nolintlint
     - prealloc
     - predeclared
@@ -52,42 +52,42 @@ linters-settings:
     excludes:
       - G107
   importas:
-      no-unaliased: true
-      alias:
-        # Kubernetes
-        - pkg: k8s.io/api/core/v1
-          alias: corev1
-        - pkg: k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1
-          alias: apiextensionsv1
-        - pkg: k8s.io/apimachinery/pkg/apis/meta/v1
-          alias: metav1
-        - pkg: k8s.io/apimachinery/pkg/api/errors
-          alias: apierrors
-        - pkg: k8s.io/apimachinery/pkg/util/errors
-          alias: kerrors
-        - pkg: k8s.io/component-base/logs/api/v1
-          alias: logsv1
-        # Controller Runtime
-        - pkg: sigs.k8s.io/controller-runtime
-          alias: ctrl
-        # KCP
-        - pkg: sigs.k8s.io/cluster-api/controlplane/kubeadm/api/v1beta1
-          alias: controlplanev1
-        # CAPI
-        - pkg: sigs.k8s.io/cluster-api/api/v1alpha3
-          alias: clusterv1alpha3
-        - pkg: sigs.k8s.io/cluster-api/api/v1alpha4
-          alias: clusterv1alpha4
-        - pkg: sigs.k8s.io/cluster-api/api/v1beta1
-          alias: clusterv1
-        # CAPM3
-        - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1alpha5
-          alias: infrav1alpha5
-        - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1beta1
-          alias: infrav1
-        # BMO
-        - pkg: github.com/metal3-io/baremetal-operator/apis/metal3.io/v1alpha1
-          alias: bmov1alpha1
+    no-unaliased: true
+    alias:
+      # Kubernetes
+      - pkg: k8s.io/api/core/v1
+        alias: corev1
+      - pkg: k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1
+        alias: apiextensionsv1
+      - pkg: k8s.io/apimachinery/pkg/apis/meta/v1
+        alias: metav1
+      - pkg: k8s.io/apimachinery/pkg/api/errors
+        alias: apierrors
+      - pkg: k8s.io/apimachinery/pkg/util/errors
+        alias: kerrors
+      - pkg: k8s.io/component-base/logs/api/v1
+        alias: logsv1
+      # Controller Runtime
+      - pkg: sigs.k8s.io/controller-runtime
+        alias: ctrl
+      # KCP
+      - pkg: sigs.k8s.io/cluster-api/controlplane/kubeadm/api/v1beta1
+        alias: controlplanev1
+      # CAPI
+      - pkg: sigs.k8s.io/cluster-api/api/v1alpha3
+        alias: clusterv1alpha3
+      - pkg: sigs.k8s.io/cluster-api/api/v1alpha4
+        alias: clusterv1alpha4
+      - pkg: sigs.k8s.io/cluster-api/api/v1beta1
+        alias: clusterv1
+      # CAPM3
+      - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1alpha5
+        alias: infrav1alpha5
+      - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1beta1
+        alias: infrav1
+      # BMO
+      - pkg: github.com/metal3-io/baremetal-operator/apis/metal3.io/v1alpha1
+        alias: bmov1alpha1
   nolintlint:
     allow-unused: false
     allow-leading-space: false
@@ -100,19 +100,19 @@ linters-settings:
     enabled-tags:
       - experimental
     disabled-checks:
-    - appendAssign
-    - dupImport # https://github.com/go-critic/go-critic/issues/845
-    - evalOrder
-    - ifElseChain
-    - octalLiteral
-    - regexpSimplify
-    - sloppyReassign
-    - truncateCmp
-    - typeDefFirst
-    - unnamedResult
-    - unnecessaryDefer
-    - whyNoLint
-    - wrapperFunc
+      - appendAssign
+      - dupImport # https://github.com/go-critic/go-critic/issues/845
+      - evalOrder
+      - ifElseChain
+      - octalLiteral
+      - regexpSimplify
+      - sloppyReassign
+      - truncateCmp
+      - typeDefFirst
+      - unnamedResult
+      - unnecessaryDefer
+      - whyNoLint
+      - wrapperFunc
   unused:
     go: "1.19"
 issues:
@@ -123,6 +123,11 @@ issues:
     - path: _test\.go
       linters:
         - unused
+    # Specific exclude rules for deprecated fields that are still part of the codebase. 
+    # These should be removed as the referenced deprecated item is removed from the project.
+    - linters:
+        - staticcheck
+      text: "SA1019:"
     # Disable linters for conversion
     - linters:
         - staticcheck
@@ -135,38 +140,38 @@ issues:
     - path: (test|e2e)/.*.go
       text: should not use dot imports
     - linters:
-      - revive
+        - revive
       text: "exported: exported method .*\\.(Reconcile|SetupWithManager|SetupWebhookWithManager) should have comment or be unexported"
     # Exclude some packages or code to require comments, for example test code, or fake clients.
     - linters:
-      - revive
+        - revive
       text: exported (method|function|type|const) (.+) should have comment or be unexported
       source: (func|type).*Fake.*
     - linters:
-      - revive
+        - revive
       text: exported (method|function|type|const) (.+) should have comment or be unexported
       path: fake_\.go
     - linters:
-      - revive
+        - revive
       text: exported (method|function|type|const) (.+) should have comment or be unexported
       path: .*(api|types)\/.*\/conversion.*\.go$
     - linters:
-      - revive
+        - revive
       text: "var-naming: don't use underscores in Go names;"
       path: .*(api|types)\/.*\/conversion.*\.go$
     - linters:
-      - revive
+        - revive
       text: "receiver-naming: receiver name"
       path: .*(api|types)\/.*\/conversion.*\.go$
     - linters:
-      - stylecheck
+        - stylecheck
       text: "ST1003: should not use underscores in Go names;"
       path: .*(api|types)\/.*\/conversion.*\.go$
     - linters:
-      - stylecheck
+        - stylecheck
       text: "ST1016: methods on the same type should have the same receiver name"
       path: .*(api|types)\/.*\/conversion.*\.go$
   include:
-  - EXC0002 # include "missing comments" issues from golangci-lint
+    - EXC0002 # include "missing comments" issues from golangci-lint
   max-issues-per-linter: 0
   max-same-issues: 0
