--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -21,19 +21,19 @@ providers:
   - name: ${CAPI_FROM_RELEASE}
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_FROM_RELEASE}/core-components.yaml"
     type: "url"
-    contract: v1alpha4
+    contract: ${CONTRACT_FROM}
     replacements:
       - old: --metrics-addr=127.0.0.1:8080
         new: --metrics-addr=:8080
     files:
-      - sourcePath: "../data/shared/v1alpha4/metadata.yaml"
+      - sourcePath: "../data/shared/${CAPI_FROM_RELEASE:0:4}/metadata.yaml"
   - name: ${CAPI_TO_RELEASE}
     # Use manifest from source files
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_TO_RELEASE}/core-components.yaml"
     type: "url"
-    contract: v1beta1
+    contract: ${CONTRACT_TO}
     files:
-      - sourcePath: "../data/shared/v1beta1/metadata.yaml"
+      - sourcePath: "../data/shared/${CAPI_TO_RELEASE:0:4}/metadata.yaml"
     replacements:
       - old: "--leader-elect"
         new: "--leader-elect=false"
@@ -43,19 +43,19 @@ providers:
   - name: ${CAPI_FROM_RELEASE} # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_FROM_RELEASE}/bootstrap-components.yaml"
     type: "url"
-    contract: v1alpha4
+    contract: ${CONTRACT_FROM}
     replacements:
       - old: --metrics-addr=127.0.0.1:8080
         new: --metrics-addr=:8080
     files:
-      - sourcePath: "../data/shared/v1alpha4/metadata.yaml"
+      - sourcePath: "../data/shared/${CAPI_FROM_RELEASE:0:4}/metadata.yaml"
   - name: ${CAPI_TO_RELEASE}
     # Use manifest from source files
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_TO_RELEASE}/bootstrap-components.yaml"
     type: "url"
-    contract: v1beta1
+    contract: ${CONTRACT_TO}
     files:
-      - sourcePath: "../data/shared/v1beta1/metadata.yaml"
+      - sourcePath: "../data/shared/${CAPI_TO_RELEASE:0:4}/metadata.yaml"
     replacements:
       - old: "--leader-elect"
         new: "--leader-elect=false"
@@ -65,19 +65,19 @@ providers:
   - name: ${CAPI_FROM_RELEASE} # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_FROM_RELEASE}/control-plane-components.yaml"
     type: "url"
-    contract: v1alpha4
+    contract: ${CONTRACT_FROM}
     replacements:
       - old: --metrics-addr=127.0.0.1:8080
         new: --metrics-addr=:8080
     files:
-      - sourcePath: "../data/shared/v1alpha4/metadata.yaml"
+      - sourcePath: "../data/shared/${CAPI_FROM_RELEASE:0:4}/metadata.yaml"
   - name: ${CAPI_TO_RELEASE}
     # Use manifest from source files
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_TO_RELEASE}/control-plane-components.yaml"
     type: "url"
-    contract: v1beta1
+    contract: ${CONTRACT_TO}
     files:
-      - sourcePath: "../data/shared/v1beta1/metadata.yaml"
+      - sourcePath: "../data/shared/${CAPI_TO_RELEASE:0:4}/metadata.yaml"
     replacements:
       - old: "--leader-elect"
         new: "--leader-elect=false"
@@ -87,19 +87,18 @@ providers:
   - name: ${CAPM3_FROM_RELEASE}
     value: "https://github.com/metal3-io/cluster-api-provider-metal3/releases/download/${CAPM3_FROM_RELEASE}/infrastructure-components.yaml"
     type: "url"
-    contract: v1alpha4
+    contract: ${CONTRACT_FROM}
     files:
-    - sourcePath: "../data/infrastructure-metal3/v1alpha5/metadata.yaml"
+    - sourcePath: "../data/infrastructure-metal3/${CAPM3_FROM_RELEASE:0:4}/metadata.yaml"
       targetName: "metadata.yaml"
     - sourcePath: "../_out/cluster-template-ubuntu.yaml"
       targetName: "cluster-template-ubuntu.yaml"
     - sourcePath: "../_out/cluster-template-upgrade-workload.yaml"
       targetName: "cluster-template-upgrade-workload.yaml"
-  - name: ${CAPM3_TO_RELEASE}
+  - name: v1.4.99
     value: "${PWD}/config/default"
-    contract: v1beta1
     files:
-    - sourcePath: "../data/infrastructure-metal3/v1beta1/metadata.yaml"
+    - sourcePath: "../data/infrastructure-metal3/main/metadata.yaml"
       targetName: "metadata.yaml"
     - sourcePath: "../_out/cluster-template-ubuntu.yaml"
       targetName: "cluster-template-ubuntu.yaml"
